--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,14 @@ body{
     border-radius: 0px;
 }
 
-h1, h2{
+h1, h2, h3{
     text-align: center;
+}
+.card img{
+    height: auto;
+    width: 80%;
+    margin: auto;
+    display: block;
 }
 
 .card-body{
